next-app gmega page done

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-cache
-out
+
+# Foundry
+
+# Compiler files
+cache/
+out/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
+
+# Docs
+docs/
+
+# Dotenv files except example
+.env*
+!.env.example
